--- a/mvc-web-app/mvc-web-app.csproj
+++ b/mvc-web-app/mvc-web-app.csproj
@@ -7,6 +7,11 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Razor.RuntimeCompilation" Version="5.0.6" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.6" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\dataaccess\dataaccess.csproj" />
   </ItemGroup>
 
 </Project>
