--- a/mywebapi/mywebapi.csproj
+++ b/mywebapi/mywebapi.csproj
@@ -5,7 +5,12 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.6" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="5.6.3" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\dataaccess\dataaccess.csproj" />
   </ItemGroup>
 
 </Project>
