--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,6 +11,8 @@ services:
       dockerfile: mvc-web-app/Dockerfile
     ports:
       - 8080:80
+    depends_on:
+        - sqldb
 
 
   webapi:
@@ -37,7 +39,30 @@ services:
       - .\.sqldatafiles\data:/var/opt/mssql/data
       - sql-data-secrets:/var/opt/mssql/secrets 
 
+#  WORDPRESS
+  mysqldb:
+    image: mysql:5.7
+    volumes:
+      - db_data:/var/lib/mysql
+    restart: always
+    environment:
+      MYSQL_ROOT_PASSWORD: somewordpress
+      MYSQL_DATABASE: wordpress
+      MYSQL_USER: wordpress
+      MYSQL_PASSWORD: wordpress
 
-      
+  wordpress:
+    depends_on:
+      - mysqldb
+    image: wordpress:latest
+    ports:
+      - "8003:80"
+    restart: always
+    environment:
+      WORDPRESS_DB_HOST: mysqldb:3306
+      WORDPRESS_DB_USER: wordpress
+      WORDPRESS_DB_PASSWORD: wordpress
+      WORDPRESS_DB_NAME: wordpress
 volumes:
   sql-data-secrets:
+  db_data: {}
