--- a/deployment/mysqldb-service.yaml
+++ b/deployment/mysqldb-service.yaml
@@ -6,14 +6,14 @@ metadata:
     kompose.version: 1.21.0 (992df58d8)
   creationTimestamp: null
   labels:
-    io.kompose.service: webapi
-  name: webapi
+    io.kompose.service: mysqldb
+  name: mysqldb
 spec:
   ports:
-  - name: "80"
-    port: 80
-    targetPort: 80
+  - name: "3306"
+    port: 3306
+    targetPort: 3306
   selector:
-    io.kompose.service: webapi
+    io.kompose.service: mysqldb
 status:
   loadBalancer: {}
