--- a/docker-compose.debug.yml
+++ b/docker-compose.debug.yml
@@ -12,6 +12,7 @@ services:
       - 8080:80
     environment:
       - ASPNETCORE_ENVIRONMENT=Development
+      - DATABASE_CONNECTION=Server=sqldb;Database=Blogging;User=sa;Password=Password123;
     volumes:
       - ~/.vsdbg:/remote_debugger:rw
   webapi:
@@ -21,18 +22,14 @@ services:
       dockerfile: mywebapi/Dockerfile
     ports:
       - 8081:80
-  #db:
-  #  environment:
-  #    ACCEPT_EULA: "Y"
-  #    SA_PASSWORD: example_123
-  #  expose: 
-  #    - 1433
-  #  image: microsoft/mssql-server-linux
+    environment:
+      - ASPNETCORE_ENVIRONMENT=Development
+      - DATABASE_CONNECTION=Server=sqldb;Database=Blogging;User=sa;Password=Password123;
   db:
     environment:
       ACCEPT_EULA: "Y"
       SA_PASSWORD: example_123
       MSSQL_PID: developer
     expose: 
-      - 1433
+      - 1499:1433
     image: mcr.microsoft.com/mssql/server:2019-latest
