expose to localhost ports

--- a/deployment/mvcwebapp-deployment.yaml
+++ b/deployment/mvcwebapp-deployment.yaml
@@ -33,6 +33,8 @@ spec:
         env:
         - name: ASPNETCORE_ENVIRONMENT 
           value: Development
+        - name: DATABASE_CONNECTION 
+          value: "Server=sqldb;Database=Blogging;User=sa;Password=Password123;"
       restartPolicy: Always
       serviceAccountName: ""
       volumes: null
